# nanograd-lite

./: .gitignore  CONTRIBUTING.md  LEARNINGS.md  LICENSE  README.md  Resources.md  pyproject.toml
.github/workflows/: ci.yml
demos/: mnist_demo.py  nn_demo.py  scalar_demo.py  vector_demo.py  xor_demo.py
engine/: __init__.py  tensor.py  utils.py
nanograd/: __init__.py
nanograd/engine/: __init__.py  tensor.py  utils.py
nanograd/nn/: __init__.py  layers.py  loss.py  optim.py  sequential.py
nanograd/viz/: __init__.py  graph_viz.py
nn/: __init__.py  accuracy.py  layers.py  loss.py  metrics.py  modules.py  optim.py  sequential.py
tests/: gradient_tests.py  tests_gradient.py
viz/: __init__.py  graph_viz.py
