[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanograd"
version = "0.1.0"
description = "A minimal autodiff engine and neural network library built from scratch"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# pip install nanograd[viz]
viz = [
    "graphviz>=0.20",
]
# pip install nanograd[dev]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "scikit-learn>=1.3",   # used in mnist demo / tests
    "hatch",
]

[project.urls]
Homepage = "https://github.com/duaasiraj/nanograd"
Repository = "https://github.com/duaasiraj/nanograd"
Issues = "https://github.com/duaasiraj/nanograd/issues"

[tool.hatch.build.targets.wheel]
packages = ["nanograd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "scikit-learn",
    "graphviz",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=nanograd --cov-report=term-missing"
