[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanograd-lite"
version = "0.1.1"
description = "A minimal NumPy-based autograd engine and neural network library, built from scratch"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Duaa Siraj" }
]
keywords = ["autograd", "neural network", "deep learning", "numpy", "backpropagation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
viz = [
    "graphviz>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "scikit-learn>=1.3",
    "hatch",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]

[project.urls]
Homepage = "https://github.com/duaasiraj/nanograd"
Repository = "https://github.com/duaasiraj/nanograd"
Issues = "https://github.com/duaasiraj/nanograd/issues"

[tool.hatch.build.targets.wheel]
packages = ["nanograd"]


[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "scikit-learn",
    "graphviz",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=nanograd --cov-report=term-missing"